examples/ok/cpa_matrix_scasc_long.zc
../all/cpa_matrix_scasc_long.zc