examples/fail/cramer_shoup.zc
../all/cramer_shoup.zc